# cellpress_crawling

./: .gitignore  README.md  S1074-7613(25)00378-4.html  notebook.ipynb  pyproject.toml  requirements.txt  test.py
.cache/papers_crawler/: debug_immunity_home.html  journals.json
papers/: extraction_summary_20251025_015952.csv
papers/immunity/: A TLR4-dependent fibroblast-monocyte axis in tumor-draining lymph nodes contributes to metastasis in.txt  Beyond classical immunity Mast cells as signal converters between tissues and neurons.json  Cryo-EM structure of endogenous Pfs230Pfs4845 complex with six antibodies reveals mechanisms of mala.txt  Integrin CD103 expression in naive CD8T cells promotes cytokine-driven acquisition of memory phenoty.txt  S aureusexposure during cutaneous antigen sensitization causes basophil- and interleukin-4-dependent.txt  Spatial immune profiling defines a subset of human gliomas with functional tertiary lymphoid structu.txt
scripts/: run_crawler_streamlit.py
src/papers_crawler/: __init__.py  colab_helper.py  crawl_text_async.py  crawler.py  crawler_async.py  ui.py
