[tool.poetry]
name = "papers-crawling-tool"
version = "0.1.0"
description = ""
authors = ["nct2309 <nctstuti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.14.2"
requests = "^2.32.5"
streamlit = "^1.50.0"
playwright = "^1.55.0"
playwright-stealth = "^2.0.0"
nest-asyncio = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
